src/objects/CS_Release__c.object
<CustomObject>
    <description>***Service Cloud **** This Object  maintains the Installable Product versions</description>
    <fields>
        <fullName>CS_Additional_Version_Code__c</fullName>
        <description>Additional Version Code (free text, usually blank)</description>
        <label>Additional Version Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Box_File_Id__c</fullName>
        <label>Box File Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Localization__c</fullName>
        <label>Localization</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>English (AU-NZ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (GB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Maintenance_Release_Version__c</fullName>
        <inlineHelpText>Maintenance Release Version (1, 2, 3, 4, 5, 6…)</inlineHelpText>
        <label>Maintenance Release Version</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Major_Release_version__c</fullName>
        <inlineHelpText>Major Release Version (1, 2, 3, 4, 5, 6…)</inlineHelpText>
        <label>Major Release Version</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Minor_Release_Version__c</fullName>
        <inlineHelpText>Minor Release Version (1, 2, 3, 4, 5, 6…)</inlineHelpText>
        <label>Minor Release Version</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Patch_Version__c</fullName>
        <description>Patch Version (Patch 1, Patch 2…)</description>
        <inlineHelpText>Patch Version (Patch 1, Patch 2…)</inlineHelpText>
        <label>Patch Version</label>
        <picklist>
            <picklistValues>
                <fullName>Patch 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patch 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patch 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patch 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patch 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patch 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patch 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patch 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patch 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patch 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patch 11</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Product_Version__c</fullName>
        <formula>Text(CS_Major_Release_version__c)&amp; Text(CS_Minor_Release_Version__c)  &amp;  Text(CS_Maintenance_Release_Version__c) &amp;  CS_Additional_Version_Code__c</formula>
        <label>Release Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordType.Name</field>
                <operation>contains</operation>
                <value>Standard Products,Entitled Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Product_Version</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Publish_Date__c</fullName>
        <inlineHelpText>Publish Date</inlineHelpText>
        <label>Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Publish_Status__c</fullName>
        <formula>IF(CS_IsActive__c, IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;))</formula>
        <label>Publish Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Release_Type__c</fullName>
        <label>Release Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Localization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Master</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Version__c</fullName>
        <formula>TEXT(CS_Major_Release_version__c) + &apos;.&apos; +  IF(NOT(ISPICKVAL(CS_Minor_Release_Version__c, &apos;&apos;)), TEXT(CS_Minor_Release_Version__c), &apos;0&apos;) +  IF(NOT(ISPICKVAL(CS_Maintenance_Release_Version__c, &apos;&apos;)), &apos;.&apos; + TEXT(CS_Maintenance_Release_Version__c), &apos;&apos;)</formula>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CS_Product__c</columns>
        <columns>CS_Release_Type__c</columns>
        <columns>CS_Major_Release_version__c</columns>
        <columns>CS_Minor_Release_Version__c</columns>
        <columns>CS_Maintenance_Release_Version__c</columns>
        <columns>CS_Patch_Version__c</columns>
        <columns>CS_Version__c</columns>
        <columns>CS_Product_Version__c</columns>
        <columns>CS_Localization__c</columns>
        <columns>CS_Additional_Version_Code__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <recordTypes>
        <fullName>Entitled_Product_release</fullName>
        <active>true</active>
        <description>Entitled Product</description>
        <label>Entitled Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Product</fullName>
        <active>true</active>
        <description>Standard Product Record Type</description>
        <label>Standard Products</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Gold_Master_Cannot_be_Published</fullName>
        <active>true</active>
        <description>Gold Master releases cannot be published.</description>
        <errorConditionFormula>AND (ISPICKVAL(CS_Release_Type__c, &apos;Gold Master&apos;) , 
CS_IsActive__c = True)</errorConditionFormula>
        <errorMessage>Releases of type Gold Master cannot be published.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Localization_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( 
NOT($Setup.CS_ByPass__c.CS_Disable_ValidationRule__c), 
ISPICKVAL(CS_Release_Type__c, &quot;Localization&quot;), 
ISBLANK(Text(CS_Localization__c )) 
)</errorConditionFormula>
        <errorMessage>Localization  should be selected for product type Localization</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Patch_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( 
NOT($Setup.CS_ByPass__c.CS_Disable_ValidationRule__c), 
ISPICKVAL(CS_Release_Type__c, &quot;Patch&quot;),
ISBLANK(Text(CS_Patch_Version__c)) 
)</errorConditionFormula>
        <errorMessage>Patch version can not be blank for Release Type is Patch</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Unpublish</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( 
NOT($Setup.CS_ByPass__c.CS_Disable_ValidationRule__c), 
ISCHANGED(  CS_IsActive__c  ), 
PRIORVALUE( CS_IsActive__c )=True, 
CS_IsActive__c=False 
)</errorConditionFormula>
        <errorMessage>Published Product can&apos;t be Unpublished</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Type_Match</fullName>
        <active>true</active>
        <description>Match Product and Release Record Type match</description>
        <errorConditionFormula>NOT(CS_Product__r.RecordType.Name =RecordType.Name)</errorConditionFormula>
        <errorMessage>Product Record Type and Release Record Type Mismatch</errorMessage>
    </validationRules>
</CustomObject>